# CryptoCurrencyCI-CD

./: .gitignore  README.md  docker-compose-deploy.yaml  docker-compose.yaml
.github/workflows/: AWS-EC2.yml  cargo.yml
backend/: Cargo.toml  Dockerfile  diesel.toml
backend/src/: blockchain_apis.rs  db.rs  handlers.rs  main.rs  models.rs  repository.rs
frontend/: Dockerfile  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/: App.tsx  Charts.css  Charts.tsx  model.ts
init/: startup.sql
nginx/: Dockerfile  nginx.conf
