[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde ={ version = "1", features = ["derive"]}
serde_json = "1"
dotenv = { version = "0.15.0" }
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono" ] }
axum = "0.7.4"
anyhow = "1.0"
tower-http ={version = "0.5.2", features = ["cors"]}
